Media document sends incorrect referer header https://bugs.webkit.org/show_bug.cgi?id=135839

Reviewed by Jer Noble.

Source/WebCore:

Test: http/tests/media/media-document-referer.html

* html/MediaDocument.cpp:
(WebCore::MediaDocumentParser::MediaDocumentParser): Stash referrer.
(WebCore::MediaDocumentParser::createDocumentStructure): Set outgoing referrer.
(WebCore::MediaDocument::MediaDocument): Stash referrer.
* html/MediaDocument.h:

LayoutTests:

* http/tests/media/media-document-referer-expected.txt: Added.
* http/tests/media/media-document-referer.html: Added.
* http/tests/media/resources/video-referer-check-referer.php: Take expected referer as a
    parameter instead of hard coding it.
* http/tests/media/video-referer.html: Pass referer to loader script.


Canonical link: https://commits.webkit.org/153756@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172523 268f45cc-cd09-0410-ab3c-d52691b4dbfc